# swarm-of-agents-photo-gaze

./: .coverage  .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.frontend  README.md  alembic.ini  alertmanager.yml  alerts.yml  docker-compose.yml  index.html  jest.config.js  main.py  package-lock.json  package.json  prometheus.yml  pyproject.toml  pytest.ini  qdrant_init.sh  requirements-dev.txt  requirements.txt  start.sh  tsconfig.json  vite.config.ts
alembic/: env.py
app/: backup_manager.py  database.py  embedding_generator.py  folder_scanner.py  job_queue.py  main.py  metadata_extractor.py  models.py  orchestrator.py  original_identifier.py  qdrant_client.py  quality_scorer.py  security.py  similarity_search.py  thumbnail.py  validators.py
backend/: app.py  logging_config.py  requirements.txt  test_logging.py
docs/: API.md  ARCHITECTURE.md  TROUBLESHOOTING.md  UAT_FEEDBACK.md  UAT_GUIDE.md
frontend/: package-lock.json  package.json
public/: index.html
src/: App.css  App.test.tsx  App.tsx  api.test.ts  api.ts  index.css  index.tsx
tests/: conftest.py  test_api_endpoints.py  test_app.py  test_auto_deduplicate.py  test_backup_manager.py  test_backup_manager_integration.py  test_database.py  test_docker.py  test_embedding_generator.py  test_error_handling.py  test_folder_scanner_incremental.py  test_folder_scanner_trash_exclusion.py  test_integration.py  test_job_queue.py  test_metadata_extractor.py  test_monitoring.py  test_orchestrator.py  test_original_identifier.py  test_performance.py  test_qdrant.py  test_qdrant_threshold.py  test_rescan.py  test_scalability.py  test_security.py  test_session_management.py  test_similarity_endpoints.py  test_similarity_matrix.py  test_similarity_performance.py  test_thumbnails.py  (+5 more)
(+522 files in other folders)
